<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/primary_text_dark_nodisable"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/topic_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/topic_first"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textStyle="italic" />

    <Button
        android:id="@+id/done_button1"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/alike"
        android:text="@string/done" />

    <TextView
        android:id="@+id/usertopic_text"
        style="@style/TopicStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/topic_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/article_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Articlecontent"
                android:inputType="textMultiLine"
                android:textAlignment="textStart" />

            <Button
                android:id="@+id/done_button2"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/layout_margin"
                android:fontFamily="@font/alike"
                android:text="@string/done"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/article_text"
                style="@style/TopicStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:textColor="@android:color/background_dark"
                android:visibility="gone" />

            <EditText
                android:id="@+id/author_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="16dp"
                android:ems="7"
                android:hint="@string/authorname"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/author_text"
                style="@style/TopicStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="@dimen/small_padding"
                android:textAlignment="viewEnd"
                android:textColor="@android:color/black"
                android:textStyle="bold|italic"
                android:visibility="gone" />

            <Button
                android:id="@+id/done_button3"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/layout_margin"
                android:text="@string/done"
                android:textAlignment="center" />

            <Button
                android:id="@+id/share_button"
                style="@android:style/Widget.Button.Toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/share_button"
                android:textAlignment="center" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"></LinearLayout>

</LinearLayout>